<resources>
    <string name="app_name">Zodiac</string>
    <string name="title_findSign">What’s my star sign?</string>
    <string name="title_chooseSign">CHOOSE YOUR ZODIAC SIGN</string>
    <string name="navbar_chooseSign">Choose Your Sign</string>
    <string name="navbar_findSign">Find Your Sign</string>
    <string name="navbar_celeb">Celebrities</string>
    <string name="month_prompt">Month</string>
    <string name="days_prompt">Day</string>
    <string name="years_prompt">Year</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="years">
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
    </string-array>
    <string name="lorem_ipsum" >  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  </string>
    <string name="sign_symbol">sign symbol</string>
    <string name="aries_description">Aries loves to be number one, so it’s no surprise that these audacious rams are the first sign of the zodiac. Bold and ambitious, Aries dives headfirst into even the most challenging situations (which is appropriate, since the body part associated with Aries is the head). Like their fellow fire signs, Leo and Sagittarius, Aries is a passionate, motivated, and confident leader who builds community with their cheerful disposition and relentless determination. Uncomplicated and direct in their approach, they often get frustrated by exhaustive details and unnecessary nuances. They like things quick and dirty, a temperament also reflected in their sexual proclivities.\nAries is a cardinal sign that kicks off not only the spring season but also the entire zodiac wheel. Astrologers believe that each sign learns the lessons absorbed by its preceding signs, both joyful and painful. In the case of Aries, however, there is no inherited wisdom: Aries leads with blind optimism, barreling through life with an electric joie de vivre that perfectly complements their distinctive impulsivity. These fire signs think after they leap, which often results in lessons learned the hard way. Aries represents the singular spirit (while Aries’s opposite sign, Libra, symbolizes partnership). These rams adhere to an “every person for themselves” philosophy. While this self-determination can be inspiring, Aries needs to watch out for selfish tendencies.\nAries is ruled by Mars, the dynamic red planet named after the Roman god of war. Accordingly, these courageous rams are always armed and ready for battle. Aries is known for an explosive temper, and although their outbursts don’t last long, it’s definitely best to avoid fiery rams until the steam has dissipated. But when these brazen rams are not flying off the handles, they’re upbeat, positive, and playful creatures who enjoy living life to its fullest. You can always be sure to spot an Aries excelling on the sports field, speeding down the highway, or organizing a vibrant party game.</string>
    <string name="taurus_description">Taurus is an earth sign represented by the bull. Like their celestial spirit animal, Taureans enjoy relaxing in serene, bucolic environments, surrounded by soft sounds, soothing aromas, and succulent flavors. Taurus is ruled by Venus, the enchanting planet that governs love, beauty, and money. Taurus’s Venusian influence make this earth sign the most sensual of the zodiac: These cosmic oxen are enchanted by any physical manifestation of comfort and luxury. Pleasure is a necessity for epicurean Taureans, and they feel most content when pampered. (Taurus governs the neck, so neck caresses are especially irresistible to these bulls.)\n It\'s true that in their perfect world, Taureans would spend all day bathing in a tub overflowing with essential oils. At the same time, these earth signs know the value of a dollar. Taureans aren’t afraid to roll up their sleeves and work hard to earn big rewards. These earth signs are ambitious, focused, and resilient, and they feel most secure when steadily putting money away into a savings account. Cosmic oxen are all about return on investment (the bull is also the symbol of Wall Street), and Taureans know how to play the long game in both professional and romantic pursuits. Security is paramount for Taureans, and any threat to their stability will be sure to have a celestial bull seeing red.\n As a sign, Taurus is fixed, an astrological quality that reflects Taurus’s steadfast, loyal nature. Fixed signs are excellent at maintaining systems, and Taureans prioritize consistency and reliability in all areas of their lives. It must be noted, however, that Taurus does have a bit of a reputation: What a Taurus perceives as dedication is often regarded by others as stubbornness. Accordingly, these bulls may end up lingering in unhealthy situations — whether relationships, jobs, or homes — longer than necessary just to prove a point. Despite their occasional obstinance, however, Taureans are dependable partners, soothing their friends and lovers through their trustworthiness and devotion.</string>
</resources>